removed bg from image, fixed landing section alignment, minor navbar fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,28 +43,36 @@ width:auto;
     justify-content: space-between;
 }
 
+a {
+    color:white;
+}
+
 .nav-link {
     padding:0px 2rem;
 }
 
 #landingcontainer {
-    background-image: url(../images/betta1.jpg);
+    background-image: url(../images/betta1-removebg.png);
     background-position:right;
     background-attachment:fixed;
     background-size:contain;
     background-repeat:no-repeat;
-    background-color: black;
     width:100%;
     height:100%;
     color:white;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+}
+
+#landing {
+    justify-content: center;
+    text-align: center;
 }
 
 #brand {
-    width:30%;
+    width:40%;
     height:auto;
-    margin:auto;
-    display:block;
-    
 }
 
 
